feat(脚手架): 优化依赖